--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -227,7 +227,97 @@
         </div>
     </div>
 
+    <div class="mobile-featured">
+        <div class ="featureProductsHeading" >
+            featured products
+        </div>
+        <div class="marquee">
+            <ul class="marqueeContent">
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/LexiPotSmall_25c065c4-8d9b-4760-8570-7c1bfd73b597_2048x-removebg-preview.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> Art </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{%static 'Raul/Images/Test.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> wall art </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{%static 'Raul/Images/Test2.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> DINNERWARE </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{%static 'Raul/Images/Test3.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/test_pic.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> DINNERWARE </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> WALL ART </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/Test2.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> chandelier </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/Test3.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> WAll ART </div>
+                        </div>
+                    </div>
+                </li>
 
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> dinnerware </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class = "container" data-aos="fade-in">
+                        <img src="{% static 'Raul/Images/Test3.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <div class = "text">
+                            <div class = "textInfo"> yo </div>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+    </div>
 
     <div class ="mobile-shopBanner">
         <figcaption> shop for the perfect setup</figcaption>    
@@ -241,8 +331,8 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/1.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -255,8 +345,8 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/3.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/4.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -269,8 +359,8 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/6.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -283,8 +373,8 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/7.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/8.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -297,8 +387,8 @@
             </div>
 
             <div class ="furnitureImages" id ="DecorativeSec">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
-                <img src="{%static 'Raul/Images/test_Pic.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/9.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/10.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -311,7 +401,7 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{%static 'Raul/Images/11.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
                 <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
