--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -19,10 +19,10 @@
     <div class="placeContainers">
         <div class="bigContainer">
             <a href="#">
-                <div class="container" id="cafeBanner">
-                    <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
-                    <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic">
-                    <div class = "backgroundText">
+                <div class="container" id="cafeBanners">
+                    <p id ="raulAvila"><img src="{% static 'Raul/Images/raulAvilaIncFinal.png' %}" alt="logo" width="100%"></p>
+                    <!-- <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic"> -->
+                    <div class = "backgroundText3">
                         <figcaption>
                             RAUL AVILA
                         </figcaption>
@@ -34,7 +34,6 @@
             <a href="{% url 'Raul-SecondHome' %}">
                 <div class="container" id="raulBanner">
                     <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
-                    <img src="{% static 'Raul/Images/flowers.jpg' %}" id="bgPic">
                     <div class="backgroundText2">
                         <figcaption>
                             RAUL
@@ -45,7 +44,6 @@
             <a href="#">
                 <div class="container" id="cafeBanner">
                     <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
-                    <img src="{% static 'Raul/Images/coffee.jpg' %}" id="bgPic">
                     <div class="backgroundText">
                         <figcaption>
                             CAFE FLOR
