--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -174,6 +174,10 @@ nav ul li a:hover{
         display: none;
     }
 
+    .modal2{
+        display: none;
+    }
+
     .headers{
         display: grid;
         height: 3.5em;
@@ -217,7 +221,7 @@ nav ul li a:hover{
         width:100vw;
         overflow: hidden;
         position: relative;
-        background-image: url("../Images/7.jpg");
+        background-image: url("../Images/8.jpg");
         backface-visibility: hidden;
     }
 
@@ -259,6 +263,130 @@ nav ul li a:hover{
         cursor: pointer;
     }
 
+    .horizontalScroll{
+        background-color: #bebebe;
+        height: 850px;
+        width:100%;
+        padding:50px 0px 0px 0px;
+        overflow: scroll;
+    }
+
+    .horizontalScroll::-webkit-scrollbar{
+        display: none;
+    }
+
+    .featureProductsHeading{
+        color:#cfbb63;
+        font-size:60px;
+        text-align: center;
+        width:100%;
+        padding-top:70px;
+    }
+
+    .marquee{
+        width:100vw;
+        height:650px;
+        background: transparent;
+        overflow: hidden;
+    }
+
+    .marqueeContent{
+        list-style: none;
+        height:100%;
+        display: flex;
+        animation: scrolling 30s linear infinite;
+    }
+
+    @keyframes scrolling{
+        0%{
+            transform: translateX(0);
+        }
+        100%{
+            transform: translateX(-198vw);
+        }
+    }
+
+    .marqueeContent li{
+        width:20vw;
+        padding:0px 100px;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        flex-shrink: 0;
+        white-space: nowrap;
+    }
+
+    .horizontalScroll .container{
+        position: relative;
+        padding:20px;
+        flex: 0 0 auto;
+    }
+
+    .horizontalScroll .container .imageAvatar{
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: 0.4s ease-in-out;
+        backface-visibility: hidden;
+    }
+
+    .horizontalScroll .container .text{
+        transition: 0.5s ease-in-out;
+        opacity: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+    }
+
+    .horizontalScroll .container .textInfo{
+        background-color: rgba(0,0,0,0.8);
+        color: #cfbb63;
+        font-weight: bold;
+        font-size: 32px;
+        padding: 16px 32px;
+        text-align: center;
+        letter-spacing: 1px;
+        transition: 0.4s ease-in-out;
+    }
+
+    .container button{
+        width: auto;
+        height: auto;
+        background-color: #6d6d6d;
+        outline: none;
+        border: none;
+        color: #cfbb63;
+        font-family: 'Roboto', sans-serif;
+        font-size: 45px;
+        margin:250px 0px 0px 20px;
+    }
+
+    .container span{
+        color:#cfbb63;
+        font-size:20px;
+        margin-left:auto;
+        margin-right:auto;
+    }
+
+    .container:hover .imageAvatar{
+        opacity: 0.8;
+        filter: brightness(60%) grayscale(100%);
+        box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.5);
+    }
+
+    .container:hover .text{
+        opacity: 1;
+        cursor: pointer;
+    }
+
+    .container .textInfo:hover{
+        padding:18px 34px;
+        font-size: 34px;
+    }
+
     .shopBanner{
         width:100%;
         height:8em;
@@ -283,8 +411,7 @@ nav ul li a:hover{
 
     .furniture{
         height:50vh;
-        width:100%;
-        
+        width:100%;   
     }
 
     #FurnitureSec{
@@ -355,6 +482,17 @@ nav ul li a:hover{
         padding:80px 0px 40px 0px;
     }
 
+    footer{
+        height:300px;
+    }
+
+    #scrollTop {
+        width:40px;
+        height: 40px;
+        right:15px;
+        bottom: 15px;
+    }
+
     .shopBanner{
         display: none;
     }
@@ -410,6 +548,10 @@ nav ul li a:hover{
     }
 
     .tabSection{
+        display: none;
+    }
+
+    .productDisplay{
         display: none;
     }
 }
@@ -1398,6 +1540,10 @@ nav ul li a:hover{
 
     .mobile-shopBanner{
         display:none;
+    }
+
+    .mobile-featured{
+        display: none;
     }
 
     body::-webkit-scrollbar{
