--- a/orders/templates/orders/Confirmed Order.html
+++ b/orders/templates/orders/Confirmed Order.html
@@ -1,4 +1,5 @@
-<!doctype html>
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -107,7 +108,7 @@
                 <table>
                     <tr>
                         <td class="title">
-                           <h1> R a u l</h1>
+                            <h2 style="color: goldenrod">r a u l</h2>
                         </td>
 
                         <td>
