--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -15,7 +15,7 @@
 <div class="checkoutPage">
     <div class="checkoutPageDivision">
         <div class= "leftColumn">
-            <h1>Subtotal : ${{ order.get_final_amount }}</h1>
+            <h1>Subtotal : ${{ order.final_total}}</h1>
 
             {% if shipping_selected %}
 
