--- a/orders/templates/orders/Confirmed Order.html
+++ b/orders/templates/orders/Confirmed Order.html
@@ -186,7 +186,7 @@
             <td></td>
 
             <td>
-                Total: {{order.get_final_amount}}
+                Total: {{order.final_total}}
             </td>
         </tr>
     </table>
