--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 {% load crispy_forms_tags %}
 
 <html lang="en">
@@ -221,7 +221,7 @@
 
 
     <div class ="bannerHead" id = "mainBanner">
-        <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
+        <video src="{% static 'Raul/Images/Raul_Movie.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
             <figcaption><a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
@@ -243,7 +243,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src= "{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> wall art </div>
                         </div>
@@ -251,7 +251,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test2.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src= "{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -259,7 +259,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test3.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
                         </div>
@@ -291,7 +291,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test3.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WAll ART </div>
                         </div>
@@ -300,7 +300,7 @@
 
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> dinnerware </div>
                         </div>
@@ -308,7 +308,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test3.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> yo </div>
                         </div>
