--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -18,7 +18,7 @@
 <body>
 <div class="productBanner">
     <div class="productBanner-heading">
-        {{cats}}
+        {{cats}} {{sec}}
     </div>
     <div class="arrowDown">
         <a href="#scrollHere"><img src="{%static 'Raul/Images/arrowDown.png' %}" width="3%"></a>
@@ -28,7 +28,7 @@
 <div class="productContainer">
 
     <div class="row" id="scrollHere">
-        {% for product in products %}
+        {% for product in cat_products %}
         <div class="productCard">
             <div class="image">
                 <a href="{% url 'Raul-single' product.slug %}" >
