--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -1,25 +1,15 @@
 {% extends "Raul/base.html" %}
 {% block content %}
-{% load crispy_forms_tags %}
+{% load static %}
+{%load crispy_forms_tags %}
 
 
-<style>
-    .content-section{
-        position: fixed;
-        bottom: 10px;
-        right: 10px;
-
-    }
-</style>
-
-
-
-<div class="content-section">
+<div class="conatiner" style="padding-top: 300px">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Reset Password</legend>
-            {{ form|crispy }}
+            {{form|crispy}}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Request Password</button>
